PLUGINWIZARD-45 : Store the plugin's model in a flexible JSON structure instead of tables
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49759 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_business_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_business_template.html
@@ -35,8 +35,8 @@
  
 package fr.paris.lutece.plugins.${plugin_model.pluginName}.web;
 
-import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_class.businessClassImport?cap_first};
-import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_class.businessClassImport?cap_first}Home;
+import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_class.businessClass?cap_first};
+import fr.paris.lutece.plugins.${plugin_model.pluginName}.business.${business_class.businessClass?cap_first}Home;
 import fr.paris.lutece.portal.service.message.AdminMessage;
 import fr.paris.lutece.portal.service.message.AdminMessageService;
 import fr.paris.lutece.portal.service.util.AppPropertiesService;
@@ -65,14 +65,14 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     // Constants
 
     // templates
-    private static final String TEMPLATE_MANAGE_${business_class.businessClassTemplateDeclaration}S="/admin/plugins/${plugin_model.pluginName}/manage_${business_class.businessClassTemplate}s.html";
-    private static final String TEMPLATE_CREATE_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/create_${business_class.businessClassTemplate}.html";
-    private static final String TEMPLATE_MODIFY_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/modify_${business_class.businessClassTemplate}.html";
+    private static final String TEMPLATE_MANAGE_${business_class.businessClass?upper_case}S="/admin/plugins/${plugin_model.pluginName}/manage_${business_class.businessClass?lower_case}s.html";
+    private static final String TEMPLATE_CREATE_${business_class.businessClass?upper_case}="/admin/plugins/${plugin_model.pluginName}/create_${business_class.businessClass?lower_case}.html";
+    private static final String TEMPLATE_MODIFY_${business_class.businessClass?upper_case}="/admin/plugins/${plugin_model.pluginName}/modify_${business_class.businessClass?lower_case}.html";
 
 
     // Parameters
 <#list business_class.attributes as attribute>
-    private static final String PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case}="${business_class.businessClassParam}_${attribute.attributeName?lower_case}";
+    private static final String PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case}="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}";
 </#list>
 
 
@@ -139,7 +139,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
 
         Map<String, Object> model = new HashMap<String, Object>(  );
 
-        HtmlTemplate template = AppTemplateService.getTemplate( TEMPLATE_CREATE_${business_class.businessClassTemplateDeclaration}, getLocale(  ), model );
+        HtmlTemplate template = AppTemplateService.getTemplate( TEMPLATE_CREATE_${business_class.businessClass?upper_case}, getLocale(  ), model );
 
         return getAdminPage( template.getHtml(  ) );
     }
@@ -159,13 +159,13 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
                    	 
              <#else>
         
-        if ( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ).equals( "" ) )
+        if ( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case} ).equals( "" ) )
         {
             return AdminMessageService.getMessageUrl( request, Messages.MANDATORY_FIELDS, AdminMessage.TYPE_STOP );
         }
-			<#if attribute.type = "String">${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ) );
+			<#if attribute.type = "String">${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case} ) );
 			<#elseif attribute.type = "int">
-      int n${attribute.name?cap_first} = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ) );
+      int n${attribute.name?cap_first} = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case} ) );
       ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( n${attribute.name?cap_first} );
 			</#if>
 			
@@ -183,9 +183,9 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
      */
     public String getConfirmRemove${business_class.businessClass?cap_first}( HttpServletRequest request )
     {
-        	int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) );
+        	int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${business_class.primaryKey?upper_case} ) );
           UrlItem url = new UrlItem( JSP_DO_REMOVE_${business_class.businessClass?upper_case} );
-          url.addParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case}, nId );
+          url.addParameter( PARAMETER_${business_class.businessClass?upper_case}_${business_class.primaryKey?upper_case}, nId );
           return AdminMessageService.getMessageUrl( request, MESSAGE_CONFIRM_REMOVE_${business_class.businessClass?upper_case}, url.getUrl(  ),AdminMessage.TYPE_CONFIRMATION );
     }
 
@@ -197,7 +197,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
      */
     public String doRemove${business_class.businessClass?cap_first}( HttpServletRequest request )
     {
-        int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) );
+        int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${business_class.primaryKey?upper_case} ) );
         ${business_class.businessClass?cap_first}Home.remove( nId );
         
         return JSP_REDIRECT_TO_MANAGE_${business_class.businessClass?upper_case}S;
@@ -212,13 +212,13 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     public String getModify${business_class.businessClass?cap_first}( HttpServletRequest request )
     {
         setPageTitleProperty( PROPERTY_PAGE_TITLE_MODIFY_${business_class.businessClass?upper_case} );
-        int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) );
+        int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${business_class.primaryKey?upper_case} ) );
         ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} =${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId );
 
         Map<String, Object> model = new HashMap<String, Object>(  );
         model.put( MARK_${business_class.businessClass?upper_case}, ${business_class.businessClass?lower_case} );
 
-        HtmlTemplate template = AppTemplateService.getTemplate( TEMPLATE_MODIFY_${business_class.businessClassTemplateDeclaration}, getLocale(  ), model );
+        HtmlTemplate template = AppTemplateService.getTemplate( TEMPLATE_MODIFY_${business_class.businessClass?upper_case}, getLocale(  ), model );
 
         return getAdminPage( template.getHtml(  ) );
     }
@@ -231,17 +231,17 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
      */
     public String doModify${business_class.businessClass?cap_first}( HttpServletRequest request )
     {
-      int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${business_class.primaryKey?upper_case} ) ); 
+      int nId = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${business_class.primaryKey?upper_case} ) ); 
       ${business_class.businessClass?cap_first} ${business_class.businessClass?lower_case} =${business_class.businessClass?cap_first}Home.findByPrimaryKey( nId );
         <#list business_class.attributes as attribute>  
-        if ( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ).equals( "" ) )
+        if ( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case} ).equals( "" ) )
         {
           return AdminMessageService.getMessageUrl( request, Messages.MANDATORY_FIELDS, AdminMessage.TYPE_STOP );
         }
 			<#if attribute.type = "String">
-  			 ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ) );
+  			 ${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case} ) );
       <#elseif attribute.type = "int">
-      int n${attribute.name?cap_first} = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClassParamDeclaration}_${attribute.attributeName?upper_case} ) );
+      int n${attribute.name?cap_first} = Integer.parseInt( request.getParameter( PARAMETER_${business_class.businessClass?upper_case}_${attribute.attributeName?upper_case} ) );
 			${business_class.businessClass?lower_case}.set${attribute.name?cap_first}( n${attribute.name?cap_first} );
 			</#if>       
      	</#list>
