PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50314 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_properties_file.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_properties_file.html
@@ -1,5 +1,6 @@
+# {plugin.pluginName} properties file
 
 #######################################################################################################
-# Labels
+# Default Labels for XPage
 ${plugin.pluginName}.pageTitle=${plugin.pluginName}
 ${plugin.pluginName}.pagePathLabel=${plugin.pluginName}
