PLUGINWIZARD-40 : Manage several generation schemes
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50322 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -104,7 +104,7 @@
             <form action="jsp/site/plugins/pluginwizard/DownloadZip.jsp" method="post">                
                 <input type="hidden" name="plugin_id" value="${plugin_id}" />
                 <div class="well">
-                    Modèle de génération : <@comboWithParams name="scheme" items=combo_schemes default_value="0" additionalParameters='class="input-large"' />       
+                    Modèle de génération : <@comboWithParams name="scheme" items=combo_schemes default_value="0" additionalParameters='class="input-xlarge"' />       
                 </div>
                 <button class="btn btn-success btn-large" type="submit" >
                     <i class=" icon-download-alt icon-white">  </i>
