PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50348 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_portlet_html.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_portlet_html.html
@@ -1,12 +1,12 @@
-  <#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
+<#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
   
 <#switch template_type>
  
- <#case "1">
+ <#case 0>
 <${macro}combo name="feed_id" default_value="${bra_open}default_feed_id${bra_close}" items=feed_list/>
 
  <#break>
-  <#case "2">
+  <#case 1>
 <p>
     <label>${i18n_open}${plugin_name}.modify_portlet_${portletName}.labelSource${i18n_close}</label>
    ${macro}combo_feeds${macro}
@@ -15,7 +15,7 @@
 
  <#break>
 
-  <#case "3">
+  <#case 2>
 <p>
     <label>${i18n_open}${plugin_name}.create_portlet_${portletName}.labelSource${i18n_close}</label>
    ${macro}combo_feeds${macro}
@@ -25,6 +25,5 @@
  <#break>
 
   <#default>
-  
-  </#switch>  
+</#switch>  
 
